Pie cards with all the info

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="./main.css">
 </head>
+<h1>Who Wants Pie?</h1>
+<nav class="nav">
+    <button id="button" class="zoe"> Zoe </button>
+    <button id="button" class="luke"> Luke  </button>
+    <button id="button" class="mary"> Mary </button>
+    <button id="button" class="liza"> Liza  </button>
+</nav>
 <body>
+    <div id="pie-cards"></div>
 <script src="./main.js"></script>    
 </body>
 </html>
