--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <h1>Who Wants Pie?</h1>
-<nav class="nav">
-    <button id="button" class="zoe"> Zoe </button>
-    <button id="button" class="luke"> Luke  </button>
-    <button id="button" class="mary"> Mary </button>
-    <button id="button" class="liza"> Liza  </button>
-</nav>
+<div class="instructorbuttons">
+    <button id="All" class="all"> All </button>
+    <button id="Zoe" class="zoe"> Zoe </button>
+    <button id="Luke" class="luke"> Luke  </button>
+    <button id="Mary" class="mary"> Mary </button>
+    <button id="Liza" class="liza"> Liza  </button>
+</div>
 <body>
     <div id="pie-cards"></div>
 <script src="./main.js"></script>    
